chore: remove unsupport JVM_OPTS in Dockerfile